docs/ru/1.2.1/about-atr.md
---
title: "[1.2.1] Модуль JESM ATR"
description: Документация JESM ATR — автоматизация тестирования BPMS, CRM, ERP и других систем.
---

# Модуль JESM ATR (1.2.1)

::: info Что вы узнаете

- Что такое модуль JESM ATR и для чего он используется
- Ключевые возможности и характеристики
- Модели поставки
- Системные требования
- Архитектура и компоненты модуля

:::

## Назначение

JESM ATR (далее ATR, Automation Test Runner) — один из модулей платформы JESM. Модуль предназначен для автоматизации тестирования бизнес-процессов.

Модуль адаптирован для работы с системами ниже, но не ограничен лишь ими:

- [BPMSoft](https://bpmsoft.ru)
- [Elma365](https://elma365.com)
- [Jira](https://www.atlassian.com/software/jira)
- [ServiceNow](https://www.servicenow.com)
- [SimpleOne](https://simpleone.ru)

И позволяет:

- **Тестирование:** проводить автоматическое тестирование бизнес-процессов, интеграций, клиентской и серверной логики под разными учётными записями
- **ИИ-помощник:** использовать современные возможности ИИ для ускорения написания и отладки тестовых сценариев
- **DevOps-интеграция:** интегрировать модуль с инструментами DevOps (GitLab, Bitbucket, Jenkins и т.д.) для CI/CD либо использовать без них
- **Отчётность:** уведомлять о результатах тестирования через электронную почту, интерфейс, Telegram-каналы, брокер сообщений
- **Анализ:** сохранять снимки экрана в процессе тестирования и в случае неуспешного теста

JESM ATR объединяет несколько функций (хранение, запуск и обработка результатов) в едином интерфейсе. Заменяет связку из инструментов Jenkins + Playwright|Selenium и т.д.

JESM ATR предлагает возможность составления тестов как с использованием кода на JavaScript для опытных пользователей, так и с помощью конструктора без кода.

JESM ATR содержит библиотеку готовых методов для тестирования.

## Кто использует JESM ATR?

Наши пользователи — компании, использующие системы автоматизации внутренних бизнес-процессов и предприятия (класса BPMS, CRM, ERP), в лице:

- владельца системы
- инженеров тестирования
- администраторов и разработчиков системы
- релиз-инженера

## Модели поставки

JESM ATR может поставляться как:

- **SaaS** — подписка на сервис в облаке
- **On-Premises** — размещение продукта на собственном сервере

Для каждой из поставок можно выбрать редакцию, подходящую для вашей компании:

- **Lite** — упрощённый функционал (без SSO, конструктора тестов, параметризованных планов), до 50 сценариев и 1 окружение
- **Standard** — базовый функционал (без SSO), до 2 сценариев и окружений
- **Enterprise** — полный функционал, неограниченное количество сценариев и окружений

## Системные требования {#system-requirements}

Минимальные системные требования для **On-Premises**. Фактические параметры могут быть выше в зависимости от нагрузки.

- **ОС:** Ubuntu Server 22+, Debian 11+, Alma Linux 8+
- **Процессор:** x86-64, 4 vCPU и выше
- **Диск:** 120 ГБ\*
- **ОЗУ:** 8 ГБ\*\* и выше

\* Основной потребитель диска — хранение скриншотов тестовых сценариев.

\*\* При увеличении числа [воркеров](#architecture) рекомендуется +2 ГБ ОЗУ на каждый воркер.

## Архитектура и компоненты модуля {#architecture}

JESM ATR построен на Golang, Vue.js, PostgreSQL, Redis, nginx и Cypress. Используется контейнеризация на базе Docker.

Модуль может быть развёрнут на серверных мощностях заказчика и быть доступен как в Internet, так и в Intranet.

Основные компоненты:

- **api**
- **ui**
- **db**
- **queue**
- **worker** (воркер)

**Worker** — ПО, которое запускает и выполняет тестовые сценарии и обрабатывает результаты. Воркеров может быть несколько; **рекомендуется** не менее двух. Увеличение числа воркеров ускоряет параллельное выполнение задач из очереди. Воркер выполняет тесты в браузере Chrome.

Каждый компонент имеет свою версию — учитывайте это при обновлении JESM по руководствам вендора.